--- a/JavaBBS/BBS_with_SpringMVC_MyBatis/WebRoot/WEB-INF/web.xml
+++ b/JavaBBS/BBS_with_SpringMVC_MyBatis/WebRoot/WEB-INF/web.xml
@@ -40,7 +40,7 @@
 	</filter-mapping>
 
 	<welcome-file-list>
-		<welcome-file>Login.jsp</welcome-file>
+		<welcome-file>jsp/Login.jsp</welcome-file>
 
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.htm</welcome-file>
