--- a/JavaBBS/BBS_with_SpringMVC_Hibernate_Maven/pom.xml
+++ b/JavaBBS/BBS_with_SpringMVC_Hibernate_Maven/pom.xml
@@ -15,12 +15,28 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- http://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+		<!-- Servlet -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
 		</dependency>
+
+		<!-- http://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>4.3.11.Final</version>
+		</dependency>
+
+		<!-- MySQL -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.38</version>
+		</dependency>
+
+
 	</dependencies>
 	<build>
 		<finalName>BBS_with_SpringMVC_Hibernate_Maven</finalName>
