--- a/JavaBBS/BBS_with_SpringMVC_Hibernate_Maven/pom.xml
+++ b/JavaBBS/BBS_with_SpringMVC_Hibernate_Maven/pom.xml
@@ -8,6 +8,7 @@
 	<name>BBS_with_SpringMVC_Hibernate_Maven Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
+		<!-- JUnit -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -22,7 +23,7 @@
 			<version>3.1.0</version>
 		</dependency>
 
-		<!-- http://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+		<!-- Hibernate -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
@@ -36,6 +37,26 @@
 			<version>5.1.38</version>
 		</dependency>
 
+		<!-- Spring -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>4.2.6.RELEASE</version>
+		</dependency>
+
+		<!-- JSTL -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+	
+		<!-- Standard -->
+		<dependency>
+			<groupId>taglibs</groupId>
+			<artifactId>standard</artifactId>
+			<version>1.1.2</version>
+		</dependency>
 
 	</dependencies>
 	<build>
