--- a/JavaBBS/BBS_by_mm/WebRoot/WEB-INF/web.xml
+++ b/JavaBBS/BBS_by_mm/WebRoot/WEB-INF/web.xml
@@ -20,7 +20,7 @@
 
 	<filter>
 		<filter-name>EncodingFilter</filter-name>
-		<filter-class>com.maimieng.Filter.MyFilter</filter-class>
+		<filter-class>com.maimieng.Filter.EncodingFilter</filter-class>
 		<init-param>
 			<param-name>encoding</param-name>
 			<param-value>utf-8</param-value>
@@ -31,14 +31,20 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
+	<filter>
+		<filter-name>LoginFilter</filter-name>
+		<filter-class>com.maimieng.Filter.LoginFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>LoginFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
 	<welcome-file-list>
 		<welcome-file>login.html</welcome-file>
 
-		<!-- <welcome-file>index.html</welcome-file>
-		<welcome-file>index.htm</welcome-file>
-		<welcome-file>index.jsp</welcome-file>
-		<welcome-file>default.html</welcome-file>
-		<welcome-file>default.htm</welcome-file>
-		<welcome-file>default.jsp</welcome-file> -->
+		<!-- <welcome-file>index.html</welcome-file> <welcome-file>index.htm</welcome-file> 
+			<welcome-file>index.jsp</welcome-file> <welcome-file>default.html</welcome-file> 
+			<welcome-file>default.htm</welcome-file> <welcome-file>default.jsp</welcome-file> -->
 	</welcome-file-list>
 </web-app>
