格式化代码

--- a/JavaBBS/BBS_by_mm/WebRoot/WEB-INF/web.xml
+++ b/JavaBBS/BBS_by_mm/WebRoot/WEB-INF/web.xml
@@ -41,6 +41,6 @@
 	</filter-mapping>
 
 	<welcome-file-list>
-		<welcome-file>Login.html</welcome-file>
+		<welcome-file>jsp/Login/Login.jsp</welcome-file>
 	</welcome-file-list>
 </web-app>
